--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HelloRailsReact</title>
+    <title>HelloRailsReact2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
+
     <%= yield %>
+    <div id="root"></div>
+
+    <%= javascript_pack_tag 'application' %>
   </body>
 </html>
